--- a/targets/modules_configuration.json
+++ b/targets/modules_configuration.json
@@ -15,7 +15,10 @@
             "max_oldness_seconds":180
          },
          "a7df32de3a60dfdb7a0b":{
-            "max_oldness_seconds":60
+            "max_oldness_seconds":60,
+            "url_parameters":{
+               "live":true
+            }
          },
          "ch4875eda56be56000ac":{
             "max_oldness_seconds":60
